--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
 <head>
   <title>Project SGB</title>
 </head>
-
-<p style="background-image: url('https://static-cdn.jtvnw.net/jtv_user_pictures/80042d57-f1a8-4e85-a282-93e73ae2ac9c-profile_image-300x300.png');">
+<style>
+body {
+  background-image: url('https://static-cdn.jtvnw.net/jtv_user_pictures/80042d57-f1a8-4e85-a282-93e73ae2ac9c-profile_image-300x300.png');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
+</style>
 <h1 style="color:goldenrod;font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">SGB</h1>
 
 </html>
