--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 </head>
 <style>
 body {
-  background-image: url('https://static-cdn.jtvnw.net/jtv_user_pictures/80042d57-f1a8-4e85-a282-93e73ae2ac9c-profile_image-300x300.png');
-  background-repeat: no-repeat;
+  background-image: url('https://static-cdn.jtvnw.net/jtv_user_pictures/80042d57-f1a8-4e85-a282-93e73ae2ac9c-profile_image-300x300.png')
   background-attachment: fixed;
   background-size: cover;
 }
