--- a/index.html
+++ b/index.html
@@ -6,11 +6,9 @@
 </head>
 <style>
 body {
-  background-image: url('https://static-cdn.jtvnw.net/jtv_user_pictures/80042d57-f1a8-4e85-a282-93e73ae2ac9c-profile_image-300x300.png')
-  background-attachment: fixed;
-  background-size: cover;
+  background-color: black
 }
 </style>
-<h1 style="color:goldenrod;font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">SGB</h1>
+<h1 style="color:white;font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">SGB</h1>
 
 </html>
