--- a/index.html
+++ b/index.html
@@ -9,6 +9,43 @@ body {
   background-color: black
 }
 </style>
-<h1 style="color:white;font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">SGB</h1>
+<h1 style="color:white;font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">Project SGB</h1>
+<h1> </h1>
+<table>
+  <tr>
+    <th>MC</th>
+  </tr>
+  <tr>
+    <a href="https://eaglecraft.pages.dev/">Server 1</td>
+  </tr>
+  <tr>
+    <a href="https://skoolgq.github.io/skooleagler/eaglercraft.html">Server 2</td>
+  </tr>
+  <tr>
+    <a href="https://ubg100.github.io/games/eaglercraft/index.html">Server 3</td>
+  </tr>
+  <tr>
+    <a href="https://sd592g.github.io/zj684od4lfg/">Server 4</td>
+  </tr>
+  <tr>
+    <a href="https://d1tm91r4ytbt54.cloudfront.net/2779cbcb-a02f-48a3-9e2e-95a8d123d165/1685483461665/web/index.html">Server 5</td>
+  </tr>
+  <tr>
+    <a href="https://eaglercraft.q13x.com/">Server 6</td>
+  </tr>
+  <tr>
+    <a href="https://player.work/minecraft-18/">Server 7</td>
+  </tr>
+  <tr>
+    <a href="https://cerealistic.github.io/eaglercraft1.5.2/">Server 8</td>
+  </tr>
+  <tr>
+    <a href="https://oncoursemail.github.io/omit/">Server 9</td>
+  </tr>
+  <tr>
+    <a href="https://burritocraft-3.burritoedition.repl.co/">Server 10</td>
+  </tr>
+  
+</table>
 
 </html>
