--- a/index.html
+++ b/index.html
@@ -6,26 +6,31 @@
 </head>
 <style>
 body {
-  background-color: red
+  background-color: black
 }
 </style>
+
+table, th, td {
+    border: 1px solid white;
+  }
+
 <h1 style="color:white;font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">Project SGB</h1>
 <h1> </h1>
 <table>
   <tr>
-    <th>MC</th>
+    <th style="color:white;font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">MC</th>
   </tr>
   <tr>
-    <td><a href="https://eaglecraft.pages.dev/">Server 1</a></td>
-    <td><a href="https://skoolgq.github.io/skooleagler/eaglercraft.html">Server 2</a></td>
-    <td><a href="https://ubg100.github.io/games/eaglercraft/index.html">Server 3</a></td>
-    <td><a href="https://sd592g.github.io/zj684od4lfg/">Server 4</a></td>
-    <td><a href="https://d1tm91r4ytbt54.cloudfront.net/2779cbcb-a02f-48a3-9e2e-95a8d123d165/1685483461665/web/index.html">Server 5</a></td>
-    <td><a href="https://eaglercraft.q13x.com/">Server 6</a></td>
-    <td><a href="https://player.work/minecraft-18/">Server 7</a></td>
-    <td><a href="https://cerealistic.github.io/eaglercraft1.5.2/">Server 8</a></td>
-    <td><a href="https://oncoursemail.github.io/omit/">Server 9</a></td>
-    <td><a href="https://burritocraft-3.burritoedition.repl.co/">Server 10</a></td>
+    <td><a style="color:white;font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif" href="https://eaglecraft.pages.dev/">Server 1</a></td>
+    <td><a style="color:white;font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif" href="https://skoolgq.github.io/skooleagler/eaglercraft.html">Server 2</a></td>
+    <td><a style="color:white;font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif" href="https://ubg100.github.io/games/eaglercraft/index.html">Server 3</a></td>
+    <td><a style="color:white;font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif" href="https://sd592g.github.io/zj684od4lfg/">Server 4</a></td>
+    <td><a style="color:white;font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif" href="https://d1tm91r4ytbt54.cloudfront.net/2779cbcb-a02f-48a3-9e2e-95a8d123d165/1685483461665/web/index.html">Server 5</a></td>
+    <td><a style="color:white;font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif" href="https://eaglercraft.q13x.com/">Server 6</a></td>
+    <td><a style="color:white;font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif" href="https://player.work/minecraft-18/">Server 7</a></td>
+    <td><a style="color:white;font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif" href="https://cerealistic.github.io/eaglercraft1.5.2/">Server 8</a></td>
+    <td><a style="color:white;font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif" href="https://oncoursemail.github.io/omit/">Server 9</a></td>
+    <td><a style="color:white;font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif" href="https://burritocraft-3.burritoedition.repl.co/">Server 10</a></td>
   </tr>
 </table>
 
