--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@ body {
 table, th, td {
     border: 1px solid white;
   }
+h1 {
+  outline: 5px solid rgb(255, 255, 255);
+}
 </style>
 
-<h1 style="color:white;font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">Project SGB</h1>
+<h1 style="text-align:center;color:white;font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">Project SGB</h1>
 <h1> </h1>
 <table>
   <tr>
-    <th style="color:greenyellow;font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">MC</th>
+    <th><b style="color:greenyellow;font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">MC</b></th>
   </tr>
   <tr>
     <td><a style="color:white;font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif" href="https://eaglecraft.pages.dev/">Server 1</a></td>
@@ -35,7 +38,7 @@ table, th, td {
 
 <table>
   <tr>
-    <th style="color:yellow;font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">MX3M</th>
+    <th><b style="color:yellow;font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">MX3M</b></th>
   </tr>
   <tr>
     <td><a style="color:white;font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif" href="https://storage.y8.com/y8-studio/html5/annu/moto1/?key=2365427&value=87599">Server 1</a></td>
@@ -45,7 +48,7 @@ table, th, td {
 
 <table>
   <tr>
-    <th style="color:gray;font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">COO</th>
+    <th><b style="color:gray;font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">COO</b></th>
   </tr>
   <tr>
     <td><a style="color:white;font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif" href="https://sites.google.com/site/classroom6x/call-of-ops-2">Server 1</a></td>
@@ -56,7 +59,7 @@ table, th, td {
 
 <table>
   <tr>
-    <th style="color:red;font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">1L</th>
+    <th><b style="color:red;font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">1L</b></th>
   </tr>
   <tr>
     <td><a style="color:white;font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif" href="https://d1tm91r4ytbt54.cloudfront.net/4a2bd50a-0f2f-45be-9e66-a2adf5849945/1680626121644/1v1-lol/index.html">Server 1</a></td>
