CSS styles changed
The internal CSS has been moved to a separate styles.css stylesheet - code has been linked to the stylesheet.

--- a/index.html
+++ b/index.html
@@ -4,25 +4,7 @@
 <head>
   <title>Project SGB</title>
 </head>
-<!--style-->
-<style>
-.nt{
-  color:white;
-  font-family:'Segoe UI';
-}
-body {
-  background-color: black
-}
-table, th, td {
-    border: 1px solid white;
-  }
-#psgb{
-  outline: 1px solid rgb(255, 255, 255);
-  text-align:center;
-  color:white;
-  font-family:'Segoe UI';
-}
-</style>
+<link rel="stylesheet" type="text/css" href="styles.css">
 
 <h1 id="psgb">Project SGB</h1>
 <br></br>
