sans serif in main html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <br></br>
 <table>
   <tr>
-    <th><b style="color:greenyellow;font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">MC</b></th>
+    <th><b style="color:greenyellow;font-family:sans-serif, Tahoma, Geneva, Verdana, sans-serif">MC</b></th>
   </tr>
   <tr>
     <td><a class="nt" href="https://eaglecraft.pages.dev/" target="_blank" target="_blank">Server 1</a></td>
@@ -28,7 +28,7 @@
 <br></br>
 <table>
   <tr>
-    <th><b style="color:yellow;font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">MX3M</b></th>
+    <th><b style="color:yellow;font-family:sans-serif, Tahoma, Geneva, Verdana, sans-serif">MX3M</b></th>
   </tr>
   <tr>
     <td><a class="nt" href="https://storage.y8.com/y8-studio/html5/annu/moto1/?key=2365427&value=87599" target="_blank">Server 1</a></td>
@@ -38,7 +38,7 @@
 <br></br>
 <table>
   <tr>
-    <th><b style="color:gray;font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">COO</b></th>
+    <th><b style="color:gray;font-family:sans-serif, Tahoma, Geneva, Verdana, sans-serif">COO</b></th>
   </tr>
   <tr>
     <td><a class="nt" href="https://sites.google.com/site/classroom6x/call-of-ops-2" target="_blank">Server 1</a></td>
@@ -49,7 +49,7 @@
 <br></br>
 <table>
   <tr>
-    <th><b style="color:red;font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">1L</b></th>
+    <th><b style="color:red;font-family:sans-serif, Tahoma, Geneva, Verdana, sans-serif">1L</b></th>
   </tr>
   <tr>
     <td><a class="nt" href="https://d1tm91r4ytbt54.cloudfront.net/4a2bd50a-0f2f-45be-9e66-a2adf5849945/1680626121644/1v1-lol/index.html" target="_blank">Server 1</a></td>
@@ -66,7 +66,7 @@
 <br></br>
 <table>
   <tr>
-    <th><b style="color:beige;font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">GSA</b></th>
+    <th><b style="color:beige;font-family:sans-serif, Tahoma, Geneva, Verdana, sans-serif">GSA</b></th>
   </tr>
   <tr>
     <td><a class="nt" href="https://real-gangster-simulator-grand-city.vakhtangi1980.repl.co" target="_blank">Play</a></td>
@@ -75,7 +75,7 @@
 <br></br>
 <table>
   <tr>
-    <th><b style="color:lime;font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">TR</b></th>
+    <th><b style="color:lime;font-family:sans-serif, Tahoma, Geneva, Verdana, sans-serif">TR</b></th>
   </tr>
   <tr>
     <td><a class="nt" href="https://emulatoros.github.io/html5-games/games/templerun2/" target="_blank">Play</a></td>
@@ -84,7 +84,7 @@
 <br></br>
 <table>
   <tr>
-    <th><b style="color:pink;font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">SubS</b></th>
+    <th><b style="color:pink;font-family:sans-serif, Tahoma, Geneva, Verdana, sans-serif">SubS</b></th>
   </tr>
   <tr>
     <td><a class="nt" href="https://files.ufreegame.net/1024/Subway-Surfers-Zurich/" target="_blank">Server 1</a></td>
@@ -95,7 +95,7 @@
 <br></br>
 <table>
   <tr>
-    <th><b style="color:burlywood;font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">CCl</b></th>
+    <th><b style="color:burlywood;font-family:sans-serif, Tahoma, Geneva, Verdana, sans-serif">CCl</b></th>
   </tr>
   <tr>
     <td><a class="nt" href="https://webglmath.github.io/cookie-clicker/" target="_blank">Server 1</a></td>
@@ -106,7 +106,7 @@
 <br></br>
 <table>
   <tr>
-    <th><b style="color:plum;font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">DH</b></th>
+    <th><b style="color:plum;font-family:sans-serif, Tahoma, Geneva, Verdana, sans-serif">DH</b></th>
   </tr>
   <tr>
     <td><a class="nt" href="https://drifthunters.gitlab.io/" target="_blank">Server 1</a></td>
