Added a new server

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <td><a class="nt" href="https://cerealistic.github.io/eaglercraft1.5.2/" target="_blank">Server 8</a></td>
     <td><a class="nt" href="https://oncoursemail.github.io/omit/" target="_blank">Server 9</a></td>
     <td><a class="nt" href="https://burritocraft-3.burritoedition.repl.co/" target="_blank">Server 10</a></td>
+    <td><a href="https://reslauncher.vercel.app/1.8/beta.html" target="_blank"><b style="color:red;font-family:sans-serif">EXPERIMENTAL</b></a></td>
   </tr>
 </table>
 <br></br>
