--- a/experimental.html
+++ b/experimental.html
@@ -1,6 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
-        <title>Test Layout</title>
+        <title>Experimental</title>
         <style type="text/css">
             body, html
             {
@@ -19,7 +19,3 @@
         </div>
     </body>
 </html>
-Share
-Improve this answer
-Follow
-edited D
